--- a/CSS/ej_base.css
+++ b/CSS/ej_base.css
@@ -25,6 +25,7 @@
 }
 
 body, html {
+    background: url("assets/EJ_background.jpg") cover no-repeat;
     line-height: 1.4;
     font-size: 16px;
     width: 100%;
