--- a/CSS/ej_styling.css
+++ b/CSS/ej_styling.css
@@ -78,7 +78,7 @@
 
 /*Membership*/
 .membershipPage {
-    background: url('../ASSETS/ej_GYM2.jpg') no-repeat center center/cover;
+    background: url('ASSETS/ej_GYM2.jpg') no-repeat center center/cover;
     height: 100%;
     display: flex;
     justify-content: flex-end; 
