--- a/CSS/ej_base.css
+++ b/CSS/ej_base.css
@@ -25,7 +25,7 @@
 }
 
 body, html {
-    background: url("assets/EJ_background.jpg") cover no-repeat;
+    background: url("assets/EJ_background.jpg") no-repeat center center/cover;
     line-height: 1.4;
     font-size: 16px;
     width: 100%;
